# building-x-in-y

./: .editorconfig  .gitignore  Cargo.toml  Directory.Build.props  NOTES.md  README.md  global.json
.cargo/: config.toml
calculation-engine/: README.md
calculation-engine/csharp/: CalculationEngine.sln  Justfile  README.md  global.json
calculation-engine/csharp/benchmark/CalculationEngine.Benchmarks/: CalcBenchmarks.cs  CalculationEngine.Benchmarks.csproj
calculation-engine/csharp/src/CalculationEngine/: CalculationEngine.csproj  Expression.cs  ScalarEngine.cs  StackStack.cs  ThrowHelper.cs  VectorizedEngine.cs
calculation-engine/csharp/test/CalculationEngine.Tests/: CalculationEngine.Tests.csproj  EngineTests.cs
calculation-engine/go/: Justfile  README.md  go.mod
calculation-engine/go/internal/: stack.go  stack_test.go
calculation-engine/go/pkg/: engine.go  engine_test.go  expression.go
calculation-engine/rust/: Cargo.toml  Justfile  README.md
calculation-engine/rust/benches/: bench.rs
calculation-engine/rust/src/: lib.rs  precedence.rs
calculation-engine/rust/src/engine/: mod.rs  scalar.rs  vectorized.rs
dsa/: README.md
dsa/c/seqlock-queue/: Makefile
dsa/c/spsc/: Makefile  build.sh  main.c
dsa/cpp/: .editorconfig  Justfile  README.md  flake.nix
dsa/cpp/src/lc/: contains_duplicate.cpp
dsa/csharp/: .editorconfig  BinaryTree.cs  csharp.csproj  csharp.sln
dsa/rust/: Cargo.toml  Makefile  README.md
dsa/rust/benches/: ring_buffer.rs
dsa/rust/src/: internal.rs  lib.rs  list.rs  main.rs  ring_buffer.rs
dsa/rust/src/internal/: alignment.rs  assert.rs  mod.rs
dsa/rust/src/lc/: container_with_most_water.rs  contains_duplicate.rs  group_anagrams.rs  longest_consecutive_sequence.rs  min_stack.rs  mod.rs  product_of_array_except_self.rs  three_sum.rs  top_k_frequent_elements.rs  two_sum.rs  two_sum_2_input_array_is_sorted.rs  valid_anagram.rs  valid_palindrome.rs  valid_parentheses.rs  valid_sudoku.rs
dsa/zig/: Makefile  build.zig  flake.nix
dsa/zig/src/: RingBuffer.zig  main.zig  ring_buffer.zig  unit_tests.zig
echo-server/zig/: README.md
echo-server/zig/src/: main.zig  root.zig
flyio-distsys/rust/: Cargo.toml  Justfile
flyio-distsys/rust/src/: logger.rs  main.rs  message.rs  node.rs  protocol.rs  request.rs  response.rs  transport.rs
flyio-gossip-glomers/: README.md
flyio-gossip-glomers/rust/: Cargo.toml  Justfile
flyio-gossip-glomers/rust/src/: lib.rs  main.rs  message.rs  node.rs  transport.rs
http-server/: README.md
http-server/baseline/src/: main.rs
http-server/csharp/: Program.cs  csharp.csproj  csharp.sln
http-server/rust/: Cargo.toml  Makefile  README.md
http-server/rust-baseline/: Cargo.toml
http-server/rust-baseline/src/: main.rs
http-server/rust-monoio/: Cargo.toml  Makefile
http-server/rust/examples/: server.rs
http-server/rust/src/: buf_ring.rs  lib.rs  linux.rs  resp.rs  server.rs  server1.rs  server2.rs  util.rs  worker.rs
http-server/rust/src/workers/: io.rs  mod.rs  reactor.rs
http-server/zig/: Makefile  README.md  build.zig
http-server/zig/src/: alloc.zig  assertion.zig  datetime.zig  main.zig  root.zig  server.zig
http-server/zig/src/linuxext/: IoUring.zig  linuxext.zig
monte-carlo-sim/: README.md  input.json
monte-carlo-sim/csharp/: .editorconfig  Directory.Build.props  Makefile  Program.cs  Simulation.cs  Team.cs  csharp.csproj  csharp.sln  perf.data  perf.data.old
monte-carlo-sim/rust/: Cargo.toml  Makefile  README.md
monte-carlo-sim/rust/benches/: sim.rs
monte-carlo-sim/rust/src/: lib.rs  main.rs  sim_avx2.rs  sim_avx512.rs  util.rs
neural-net/c/: main.c
raytracing/rust/: Cargo.toml
raytracing/rust/src/: color.rs  hittable.rs  main.rs  ray.rs  vec3.rs
redis-clone/csharp/: ArenaAllocator.cs  Assertion.cs  ByteString.cs  ClientState.cs  Command.cs  CommandBuffer.cs  CommandType.cs  Makefile  Program.cs  README.md  RespParser.cs  RespWriter.cs  Server.cs  Storage.cs  Structures.cs  csharp.sln
redis-clone/csharp/src/: Assertion.cs  Server.cs  State.cs
redis-clone/csharp/src/Alloc/: UnmanagedMemoryManager.cs
redis-clone/csharp/src/Resp/: Command.cs  CommandBuffer.cs  RespParser.cs  RespWriter.cs  Responses.cs
seqlock-queue/c/: build.sh  main.c
spmc/c/: build.sh  main.c
todo-api/: README.md
todo-api/rust/: .env  Cargo.toml  Justfile  README.md  docker-compose.yml
todo-api/rust/infra/: docker-compose.yml  grafana-datasources.yaml  loki.yaml  otel-collector.yaml  tempo.yaml
todo-api/rust/migrations/: 20230814160655_init.sql
todo-api/rust/src/: error.rs  health.rs  main.rs  telemetry.rs  todos.rs
todo-api/rust/src/infra/: config.rs  db.rs  mod.rs  os.rs  telemetry.rs
todo-api/rust/src/todos/: data.rs  domain.rs  http.rs  mod.rs
