[workspace]
members = [
    "dsa/rust",
    "calculation-engine/rust",
    "http-server/rust",
    "http-server/rust-baseline",
    "monte-carlo-sim/rust",
    "todo-api/rust",
    "flyio-gossip-glomers/rust",
    "raytracing/rust"
]
resolver = "2"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = "none"
codegen-units = 1
