[package]
name = "calculation_engine"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
thiserror = "1.0.49"
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
