[package]
name = "rust-baseline"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "0.1", default-features = false }
may = { version = "0.3", default-features = false }
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git", rev = "bbcd7f7", default-features = false }
