[package]
name = "httpsrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring.git", rev = "34b27ab", features = ["bytes"] }
bytes = "1"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "1"
tracing = "0.1"
tokio = { version = "1.29.1", features = ["time", "signal", "macros"] }

[[example]]
name = "server"

[dev-dependencies]
tracing-subscriber = "0.3.17"
