[package]
name = "httpsrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
anyhow = "1"
tracing = "0.1"
io-uring = "0.6.0"
slab = "0.4"

[[example]]
name = "server"

[dev-dependencies]
tracing-subscriber = "0.3.17"
mimalloc = { version = "0.1", default-features = false }
