[package]
name = "monte-carlo-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.5"
simd_prng = { git = "https://github.com/martinothamar/simd-prng" }
rand = "0.8.5"
