[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
axum-macros = "0.3.8"
opentelemetry = { version = "0.20.0", features = ["trace", "logs", "metrics", "rt-tokio", "logs_level_enabled"] }
opentelemetry-stdout = { version = "0.1.0", features = ["trace", "logs", "metrics"]}
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
utoipa = { version = "3.4.4", features = ["axum_extras"] }

