[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["tracing"] }
axum-macros = "0.3.8"
tower-http = { version = "0.4.0", features = ["trace"] }
opentelemetry = { version = "0.20.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.20.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0" }
tracing = "0.1"
tracing-opentelemetry = "0.20"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
utoipa = { version = "3.4.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid", "macros" ] }
dotenv = "0.15.0"
uuid = { version = "1.4", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }
